@@ -63,6 +63,8 @@ E.wowVersionMatrix = {
 	[WOW_PROJECT_BURNING_CRUSADE_CLASSIC] = "Burning Crusade Classic"
 }
 
+local abandonTooltipFormat = "|cFFFFFAB8%s|r\n\n|cFFFFF569%s|r\n|cFFB5FFEB%s|r"
+local groupAbandonTooltipFormat = "|cFFFFFAB8%s|r\n\n|cFFFFF569%s|r"
 local questGroupsByName = {}
 -- TODO: We might want to create custom textures for each type
 local questButtonPool = E:CreateFramePool("Button", QuestLogFrame, "RECKLESS_ABANDON_BUTTON")
@@ -128,7 +130,7 @@ end
 
 local function RenderAbandonButton(parent, offset, questId, excluded, title, tooltip)
 	title = title or parent:GetText()
-	tooltip = tooltip or title .. "\n\n" .. L["Left Click: Abandon quest"] .. "\n" .. (excluded and L["Right Click: Include quest in group abandons"] or L["Right Click: Exclude quest from group abandons"])
+	tooltip = tooltip or format(abandonTooltipFormat, title, L["Left Click: Abandon quest"], (excluded and L["Right Click: Include quest in group abandons"] or L["Right Click: Exclude quest from group abandons"]))
 
 	local button = questButtonPool:Acquire()
 	local texture = button:GetNormalTexture()
@@ -150,7 +152,7 @@ end
 
 local function RenderGroupAbandonButton(parent, offset, title, tooltip, key)
 	title = title or parent:GetText()
-	tooltip = tooltip or format(L["Left Click: Abandon all '%s' quests"], title)
+	tooltip = tooltip or format(groupAbandonTooltipFormat, title, L["Left Click: Abandon all quests"], title)
 	key = key or getKey(title)
 
 	if questGroupsByName[key] then
@@ -200,6 +202,7 @@ end
 function onButtonEnter(self)
 	GameTooltip:SetOwner(self)
 	GameTooltip:SetText(self.tooltip)
+	GameTooltip:SetBackdropBorderColor(255, 255, 255)
 	GameTooltip:Show()
 end
 
@@ -227,11 +230,11 @@ function onAbandonButtonClick(self, button)
 		if excluded then
 			E:IncludeQuest(self.questId)
 			texture:SetVertexColor(1, 1, 1, 1)
-			self.tooltip = self.title .. "\n\n" .. L["Left Click: Abandon quest"] .. "\n" .. L["Right Click: Exclude quest from group abandons"]
+			self.tooltip = format(abandonTooltipFormat, self.title, L["Left Click: Abandon quest"], L["Right Click: Exclude quest from group abandons"])
 		else
 			E:ExcludeQuest(self.questId)
 			texture:SetVertexColor(0.5, 0.5, 1, 0.7)
-			self.tooltip = self.title .. "\n\n" .. L["Left Click: Abandon quest"] .. "\n" .. L["Right Click: Include quest in group abandons"]
+			self.tooltip = format(abandonTooltipFormat, self.title, L["Left Click: Abandon quest"], L["Right Click: Include quest in group abandons"])
 		end
 
 		self:SetNormalTexture(texture)
